[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/global.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/other/pause_menu.wav" type="AudioStream" id=2]

[node name="Global" type="Node"]
script = ExtResource( 1 )

[node name="GameExitTimer" type="Timer" parent="."]
one_shot = true

[node name="SndPauseMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="GameExitTimer" to="." method="_on_game_exit_timer_timeout"]
